# myzerionmcp

./: .coverage  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DOCKER.md  Dockerfile  FEATURE_VALIDATION.md  FIX_SUMMARY.md  GapAnalysis.md  IMPLEMENTATION_SUMMARY.md  LICENSE  OPERATIONAL_CAPABILITIES.md  README.md  USECASES.md  config.example.yaml  config.yaml  demo_listGasPrices.md  docker-compose.yml  docker-start.bat  docker-start.sh  mcp_config.json  pyproject.toml  run_http_server.py  test_gas_prices.py  test_mcp_tool.py
.claude/: settings.local.json
openspec/: project.md
openspec/changes/add-production-readiness/: proposal.md  tasks.md
openspec/changes/document-operational-capabilities/: design.md  proposal.md  tasks.md
openspec/changes/validate-feature-parity/: tasks.md
openspec/specs/api-documentation/: spec.md
openspec/specs/currency-support/: spec.md
openspec/specs/filter-validation/: spec.md
openspec/specs/pagination-handling/: spec.md
openspec/specs/rate-limit-handling/: spec.md
openspec/specs/response-handling/: spec.md
openspec/specs/testnet-support/: spec.md
openspec/specs/webhook-subscriptions/: spec.md
research/: Zerion API Documentation Guide.md  Zerion API_ Developer-Oriented Overview and Refere.md
tests/: conftest.py  test_config.py  test_errors.py  test_integration.py  test_pagination.py  test_retry_client.py  test_webhooks.py
zerion_mcp_server/: __init__.py  __main__.py  config.py  errors.py  logger.py  openapi_zerion.yaml  pagination.py  retry_client.py
(+28 files in other folders)
